checkpoint: request body streaming working